[package]
name = "ecpay_server"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
log4rs = "1.2"
chrono = { version = "0.4", features = ["serde"] }
config = "0.14.0"   # 用來處理 TOML 配置
dotenv = "0.15" # 用來讀取 .env 文件

serde = { version = "1.0", features = ["derive"] }  # 用來反序列化配置
serde_derive = "1.0.209"
serde_json = "1.0.127"
serde_urlencoded = "0.7"

actix = "0.13"
actix-web = "4.8"
actix-web-actors = "4.3.0"
futures-util = "0.3"
tokio = {version= "1", features = ["full"]}
http = "1.1"
reqwest = { version = "0.11", features = ["json"] }

bb8 = "0.8.4"   # bb8 連線池
mysql_async = "0.34.2"  # MySQL 和 MariaDB 的非同步客戶端
mysql_common= "0.32.4"
async-trait = "0.1.82"  #非同步 trait

sha2 = "0.10.6"
percent-encoding = "2.2"